--- a/src/main/resources/property.yml
+++ b/src/main/resources/property.yml
@@ -6,7 +6,7 @@ agv:
   loadSpeed: 20
   noLoadConsumptionSpeed: 12.5
   loadConsumptionSpeed: 13.3
-  chargingSpeed: 0.67
+  chargingSpeed: 150
   workPower: 10
   disconnectPower: 60
   power:
@@ -51,17 +51,1019 @@ task:
 
 #场桥到充电站的距离
 distanceOfCBridge2Station:
-  - 100
-  - 300
-  - 450
-  - 680
-  - 850
-  - 980
+  - 0.1
+  - 0.3
+  - 0.45
+  - 0.68
+  - 0.85
+  - 0.98
 
 #岸桥到充电站的距离
 distanceOfAShore2Station:
-  - 800
-  - 950
+  - 0.8
+  - 0.95
+#任务重要性随机数
+randoms:
+   - 2
+   - 1
+   - 2
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 3
+   - 3
+   - 2
+   - 2
+   - 1
+   - 2
+   - 2
+   - 3
+   - 2
+   - 1
+   - 3
+   - 3
+   - 2
+   - 1
+   - 3
+   - 3
+   - 1
+   - 3
+   - 3
+   - 2
+   - 2
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 2
+   - 2
+   - 1
+   - 3
+   - 2
+   - 2
+   - 2
+   - 3
+   - 3
+   - 3
+   - 3
+   - 2
+   - 3
+   - 1
+   - 1
+   - 1
+   - 3
+   - 3
+   - 1
+   - 3
+   - 1
+   - 3
+   - 1
+   - 1
+   - 1
+   - 3
+   - 2
+   - 2
+   - 2
+   - 1
+   - 3
+   - 2
+   - 3
+   - 1
+   - 1
+   - 3
+   - 2
+   - 3
+   - 2
+   - 2
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 3
+   - 2
+   - 3
+   - 1
+   - 2
+   - 1
+   - 1
+   - 1
+   - 2
+   - 1
+   - 2
+   - 1
+   - 2
+   - 3
+   - 1
+   - 1
+   - 3
+   - 1
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 3
+   - 3
+   - 2
+   - 1
+   - 2
+   - 2
+   - 3
+   - 2
+   - 1
+   - 3
+   - 2
+   - 2
+   - 3
+   - 2
+   - 2
+   - 2
+   - 3
+   - 1
+   - 2
+   - 3
+   - 2
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 2
+   - 2
+   - 3
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 2
+   - 3
+   - 1
+   - 3
+   - 1
+   - 3
+   - 1
+   - 1
+   - 1
+   - 3
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 3
+   - 3
+   - 2
+   - 3
+   - 1
+   - 1
+   - 3
+   - 1
+   - 3
+   - 2
+   - 3
+   - 1
+   - 1
+   - 1
+   - 3
+   - 2
+   - 1
+   - 3
+   - 1
+   - 1
+   - 1
+   - 2
+   - 1
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 2
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 2
+   - 2
+   - 2
+   - 3
+   - 1
+   - 3
+   - 1
+   - 3
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 3
+   - 2
+   - 1
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 2
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 1
+   - 1
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 2
+   - 3
+   - 3
+   - 1
+   - 2
+   - 2
+   - 2
+   - 3
+   - 3
+   - 3
+   - 1
+   - 3
+   - 3
+   - 3
+   - 3
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 2
+   - 1
+   - 1
+   - 3
+   - 3
+   - 2
+   - 1
+   - 2
+   - 2
+   - 1
+   - 2
+   - 2
+   - 2
+   - 3
+   - 1
+   - 3
+   - 3
+   - 1
+   - 3
+   - 3
+   - 1
+   - 1
+   - 1
+   - 2
+   - 2
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 1
+   - 3
+   - 1
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 3
+   - 3
+   - 2
+   - 2
+   - 3
+   - 2
+   - 1
+   - 3
+   - 2
+   - 2
+   - 3
+   - 3
+   - 3
+   - 1
+   - 3
+   - 1
+   - 3
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 3
+   - 3
+   - 3
+   - 1
+   - 1
+   - 3
+   - 2
+   - 2
+   - 1
+   - 3
+   - 2
+   - 2
+   - 3
+   - 2
+   - 3
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 2
+   - 2
+   - 3
+   - 2
+   - 1
+   - 3
+   - 3
+   - 2
+   - 3
+   - 2
+   - 3
+   - 2
+   - 3
+   - 1
+   - 1
+   - 1
+   - 1
+   - 3
+   - 2
+   - 2
+   - 2
+   - 2
+   - 3
+   - 2
+   - 2
+   - 1
+   - 2
+   - 3
+   - 1
+   - 2
+   - 3
+   - 1
+   - 2
+   - 2
+   - 2
+   - 1
+   - 1
+   - 3
+   - 1
+   - 3
+   - 1
+   - 2
+   - 3
+   - 3
+   - 3
+   - 2
+   - 2
+   - 2
+   - 2
+   - 1
+   - 3
+   - 1
+   - 3
+   - 3
+   - 1
+   - 3
+   - 3
+   - 2
+   - 2
+   - 1
+   - 3
+   - 3
+   - 1
+   - 2
+   - 3
+   - 1
+   - 2
+   - 3
+   - 1
+   - 1
+   - 1
+   - 2
+   - 1
+   - 1
+   - 1
+   - 3
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 1
+   - 3
+   - 2
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 2
+   - 3
+   - 1
+   - 2
+   - 2
+   - 2
+   - 1
+   - 2
+   - 1
+   - 3
+   - 1
+   - 1
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 1
+   - 2
+   - 3
+   - 2
+   - 1
+   - 1
+   - 3
+   - 1
+   - 3
+   - 1
+   - 2
+   - 2
+   - 3
+   - 3
+   - 3
+   - 3
+   - 2
+   - 3
+   - 3
+   - 2
+   - 1
+   - 3
+   - 1
+   - 1
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 2
+   - 1
+   - 1
+   - 2
+   - 2
+   - 2
+   - 1
+   - 2
+   - 1
+   - 1
+   - 1
+   - 3
+   - 1
+   - 2
+   - 3
+   - 1
+   - 3
+   - 3
+   - 1
+   - 2
+   - 1
+   - 3
+   - 3
+   - 2
+   - 2
+   - 1
+   - 2
+   - 1
+   - 2
+   - 3
+   - 3
+   - 1
+   - 2
+   - 2
+   - 3
+   - 2
+   - 3
+   - 3
+   - 3
+   - 2
+   - 2
+   - 1
+   - 3
+   - 1
+   - 2
+   - 3
+   - 2
+   - 3
+   - 3
+   - 2
+   - 3
+   - 2
+   - 1
+   - 1
+   - 3
+   - 2
+   - 2
+   - 3
+   - 2
+   - 2
+   - 3
+   - 3
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 3
+   - 2
+   - 3
+   - 2
+   - 3
+   - 3
+   - 1
+   - 2
+   - 2
+   - 2
+   - 1
+   - 2
+   - 1
+   - 3
+   - 3
+   - 3
+   - 2
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 2
+   - 2
+   - 1
+   - 1
+   - 3
+   - 3
+   - 1
+   - 3
+   - 2
+   - 1
+   - 2
+   - 3
+   - 1
+   - 2
+   - 3
+   - 2
+   - 2
+   - 3
+   - 3
+   - 3
+   - 3
+   - 1
+   - 2
+   - 3
+   - 3
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 1
+   - 1
+   - 3
+   - 2
+   - 2
+   - 2
+   - 3
+   - 1
+   - 3
+   - 1
+   - 3
+   - 2
+   - 2
+   - 1
+   - 2
+   - 2
+   - 2
+   - 3
+   - 2
+   - 3
+   - 3
+   - 1
+   - 2
+   - 1
+   - 1
+   - 2
+   - 3
+   - 2
+   - 2
+   - 2
+   - 1
+   - 3
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 2
+   - 1
+   - 3
+   - 3
+   - 3
+   - 1
+   - 1
+   - 1
+   - 3
+   - 1
+   - 3
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 2
+   - 2
+   - 2
+   - 3
+   - 2
+   - 2
+   - 1
+   - 3
+   - 1
+   - 1
+   - 3
+   - 3
+   - 3
+   - 2
+   - 1
+   - 3
+   - 1
+   - 2
+   - 1
+   - 1
+   - 1
+   - 1
+   - 1
+   - 2
+   - 1
+   - 2
+   - 2
+   - 1
+   - 3
+   - 3
+   - 3
+   - 2
+   - 1
+   - 3
+   - 1
+   - 1
+   - 2
+   - 2
+   - 2
+   - 1
+   - 1
+   - 3
+   - 3
+   - 3
+   - 2
+   - 1
+   - 3
+   - 1
+   - 1
+   - 3
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 1
+   - 2
+   - 1
+   - 2
+   - 3
+   - 1
+   - 2
+   - 1
+   - 1
+   - 2
+   - 1
+   - 1
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 2
+   - 2
+   - 1
+   - 2
+   - 2
+   - 3
+   - 2
+   - 1
+   - 3
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 3
+   - 2
+   - 3
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 1
+   - 1
+   - 1
+   - 2
+   - 3
+   - 1
+   - 3
+   - 2
+   - 3
+   - 1
+   - 1
+   - 3
+   - 2
+   - 3
+   - 3
+   - 1
+   - 1
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 2
+   - 1
+   - 1
+   - 3
+   - 2
+   - 1
+   - 3
+   - 3
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 3
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 1
+   - 1
+   - 2
+   - 3
+   - 3
+   - 3
+   - 3
+   - 3
+   - 1
+   - 3
+   - 2
+   - 1
+   - 2
+   - 1
+   - 3
+   - 1
+   - 3
+   - 3
+   - 3
+   - 1
+   - 3
+   - 3
+   - 1
+   - 3
+   - 2
+   - 3
+   - 2
+   - 3
+   - 3
+   - 2
+   - 3
+   - 3
+   - 1
+   - 2
+   - 3
+   - 3
+   - 2
+   - 3
+   - 2
+   - 1
+   - 1
+   - 1
+   - 3
+   - 1
+   - 1
+   - 1
+   - 1
+   - 3
+   - 3
+   - 3
+   - 2
+   - 1
+   - 1
+   - 1
+   - 3
+   - 2
+   - 2
+   - 3
+   - 3
+   - 1
+   - 1
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 3
+   - 3
+   - 3
+   - 1
+   - 1
+   - 2
+   - 3
+   - 2
+   - 2
+   - 1
+   - 1
+   - 1
+   - 3
+   - 3
+   - 3
+   - 2
+   - 3
+   - 1
+   - 3
+   - 3
+   - 2
+   - 2
+   - 2
+   - 3
+   - 2
+   - 3
+   - 3
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 1
+   - 2
+   - 3
+   - 1
+   - 2
+   - 2
+   - 2
+   - 3
+   - 3
+   - 3
+   - 1
+   - 3
+   - 3
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 2
+   - 1
+   - 3
+   - 3
+   - 2
+   - 2
+   - 2
+   - 3
+   - 3
+   - 3
+   - 3
+   - 1
+   - 3
+   - 3
+   - 2
+   - 2
+   - 2
+   - 3
+   - 1
+   - 1
+   - 3
+   - 1
+   - 2
+   - 2
+   - 3
+   - 2
+   - 3
+   - 3
+   - 1
+   - 3
+   - 3
+   - 3
+   - 2
+   - 2
+   - 3
+   - 3
+   - 2
+   - 2
+   - 3
+   - 2
+   - 3
+   - 2
+   - 1
+   - 2
+   - 2
+   - 1
+   - 1
+   - 3
+   - 3
+   - 1
+   - 3
+   - 1
+   - 2
+   - 3
+   - 2
+   - 3
+   - 2
+   - 1
+   - 1
+   - 1
+   - 1
+   - 1
+   - 2
+   - 3
+   - 1
+   - 1
+   - 1
+   - 1
+   - 2
+   - 2
+   - 3
+   - 2
+   - 2
+   - 3
+   - 2
+   - 2
+   - 3
+   - 3
+   - 2
+   - 2
+   - 1
+   - 1
+   - 2
+   - 2
+   - 3
+   - 1
+   - 2
+   - 1
+   - 3
+   - 2
+   - 3
+   - 2
+   - 3
+   - 2
+   - 3
+   - 2
+   - 1
+   - 3
+   - 3
 
 
 
